--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "description": "",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "hardhat": "^2.24.3"
+    "hardhat": "^2.24.3",
+    "hardhat-gas-reporter": "^2.3.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0"
   }
 }
